test/types/records/split-init/incompatible-type2.good
incompatible-type2.chpl:3: In function 'test':
incompatible-type2.chpl:6: error: cannot initialize 'x' of type 'int(64)' from '"one"'
incompatible-type2.chpl:8: error: cannot initialize 'x' of type 'int(64)' from '"two"'
